testdata/baselines/reference/compiler/tsCheckPreservedAfterReference.errors.txt
/checked.js(4,1): error TS2322: Type 'number' is not assignable to type 'string'.
/checked.ts(4,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== /checked.ts (1 errors) ====
    // @ts-check
    /// <reference lib="dom" />
    let a = '';
    a = 1;
    ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
==== /checked.js (1 errors) ====
    // @ts-check
    /// <reference lib="dom" />
    let b = '';
    b = 1;
    ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    